[gd_scene load_steps=11 format=3 uid="uid://d06oj674g4rc2"]

[ext_resource type="Script" path="res://scripts/dificultad.gd" id="1_avdim"]
[ext_resource type="Theme" uid="uid://ccr3xj3644dmh" path="res://menu.tres" id="1_fmlqu"]
[ext_resource type="Texture2D" uid="uid://bmvvnoxnppv1d" path="res://assets/escenario/water2.png" id="3_p2tua"]
[ext_resource type="Texture2D" uid="uid://mcstrji2fkwx" path="res://assets/escenario/water1.png" id="4_k8moy"]
[ext_resource type="Texture2D" uid="uid://bxx6065jphnwb" path="res://assets/escenario/grass2.png" id="5_utvkg"]
[ext_resource type="Texture2D" uid="uid://cadmv268f76g7" path="res://assets/escenario/bg_wood.png" id="6_6y566"]
[ext_resource type="Texture2D" uid="uid://d80n1uh2n0iq" path="res://assets/escenario/backgroundEmpty.png" id="7_bgidu"]
[ext_resource type="AudioStream" uid="uid://bmv3mq1jrr6rh" path="res://assets/sonidos/click.ogg" id="8_itnnm"]
[ext_resource type="FontFile" uid="uid://2afrstrnlcnc" path="res://assets/fuente/Frogie-Regular.ttf" id="9_sg4he"]

[sub_resource type="LabelSettings" id="LabelSettings_fdtej"]
font = ExtResource("9_sg4he")
font_size = 25

[node name="Dificultad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_avdim")

[node name="lbl_seleccionar_dificultad" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -361.0
offset_top = 66.0
offset_right = 361.0
offset_bottom = 149.0
grow_horizontal = 2
theme = ExtResource("1_fmlqu")
theme_override_font_sizes/font_size = 60
text = "SELECCIONA DIFICULTAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -110.0
offset_right = 125.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fmlqu")

[node name="Facil" type="Button" parent="Panel"]
layout_mode = 2
theme = ExtResource("1_fmlqu")
text = "FACIL"

[node name="Media" type="Button" parent="Panel"]
layout_mode = 2
theme = ExtResource("1_fmlqu")
text = "MEDIA"

[node name="Dificil" type="Button" parent="Panel"]
layout_mode = 2
theme = ExtResource("1_fmlqu")
text = "DIfICIL"

[node name="Volver" type="Button" parent="Panel"]
layout_mode = 2
theme = ExtResource("1_fmlqu")
text = "VOLVER"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Mar1" type="TextureRect" parent="CanvasLayer"]
z_index = -2
offset_top = 442.0
offset_right = 1152.0
offset_bottom = 665.0
scale = Vector2(1, 0.5)
texture = ExtResource("3_p2tua")
stretch_mode = 1

[node name="Mar2" type="TextureRect" parent="CanvasLayer"]
z_index = -3
offset_top = 389.0
offset_right = 1152.0
offset_bottom = 613.0
scale = Vector2(1, 0.540001)
texture = ExtResource("4_k8moy")
stretch_mode = 1

[node name="Mar3" type="TextureRect" parent="CanvasLayer"]
z_index = -4
offset_top = 336.0
offset_right = 1152.0
offset_bottom = 560.0
scale = Vector2(1, 0.540001)
texture = ExtResource("3_p2tua")
stretch_mode = 1

[node name="Campo" type="TextureRect" parent="CanvasLayer"]
z_index = -5
offset_top = 250.0
offset_right = 1152.0
offset_bottom = 375.0
texture = ExtResource("5_utvkg")
expand_mode = 1
stretch_mode = 1

[node name="Madera" type="TextureRect" parent="CanvasLayer"]
z_index = 1000
offset_top = 523.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("6_6y566")
expand_mode = 1

[node name="Fondo" type="TextureRect" parent="CanvasLayer"]
z_index = -15
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_bottom = 612.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.5)
texture = ExtResource("7_bgidu")
stretch_mode = 1

[node name="Clic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_itnnm")

[node name="by Álvaro Moyano Vila" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -75.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Creado y diseñado por Álvaro Moyano Vila"
label_settings = SubResource("LabelSettings_fdtej")
horizontal_alignment = 1

[connection signal="pressed" from="Panel/Facil" to="." method="_on_facil_pressed"]
[connection signal="pressed" from="Panel/Media" to="." method="_on_media_pressed"]
[connection signal="pressed" from="Panel/Dificil" to="." method="_on_dificil_pressed"]
[connection signal="pressed" from="Panel/Volver" to="." method="_on_volver_pressed"]
